Allow phase skipping
